# src/controllers/auth.controller.ts
@@ -23,7 +23,27 @@ const registerValidateSchema = Yup.object({
   fullName: Yup.string().required(),
   username: Yup.string().required(),
   email: Yup.string().email().required(),
-  password: Yup.string().required(),
+  password: Yup.string()
+    .required()
+    .min(6, "Password must be at least 6 characters")
+    .test(
+      "at-least-one-uppercase-letter",
+      "Contains at least one uppercase letter", 
+      (value) => {
+        if (!value) return false;
+        const regex = /^(?=.*[A-Z])/;
+        return regex.test(value);
+      }
+    )
+    .test(
+      "at-least-one-number",
+      "Contains at least one uppercase letter", 
+      (value) => {
+        if (!value) return false;
+        const regex = /^(?=.*\d)/;
+        return regex.test(value);
+      }
+    ),
   confirmPassword: Yup.string()
     .required()
     .oneOf([Yup.ref("password"), ""], "Passwords do not match"),
@@ -31,6 +51,9 @@ const registerValidateSchema = Yup.object({
 
 export default {
   async register(req: Request, res: Response) {
+    /**
+     #swagger.tags = ['Auth']
+     */
     const { fullName, username, email, password, confirmPassword } =
       req.body as unknown as TRegister;
 
@@ -64,6 +87,7 @@ export default {
   },
   async login(req: Request, res: Response) {
     /* 
+      #swagger.tags = ['Auth']
       #swagger.requestBody = {
       required: true,
       schema: {$ref: "#/components/schemas/LoginRequest"}
@@ -83,8 +107,9 @@ export default {
           },
           {
             username: identifier,
-          }
-        ]
+          },
+        ],
+        isActive: true,
       });
 
       if (!userByIdentifier) {
@@ -94,7 +119,6 @@ export default {
         });
       }
       
-
       // validasi password
       const validatePassword : boolean = encrypt(password) === userByIdentifier.password;
 
@@ -124,7 +148,9 @@ export default {
     }
   },
   async me(req: IReqUser, res: Response) {
-    /* #swagger.security = [{ "bearerAuth": [] }] */
+    /* 
+    #swagger.tags = ['Auth']
+    #swagger.security = [{ "bearerAuth": [] }] */
     try {
       const user = req.user;
       const result = await UserModel.findById(user?.id);
@@ -143,4 +169,41 @@ export default {
       });
     }
   },
+  async activation(req: Request, res: Response) {
+    /* 
+      #swagger.tags = ['Auth']
+      #swagger.description = 'Endpoint untuk aktivasi akun'
+      #swagger.requestBody = {
+        required: true,
+        schema: { $ref: "#/components/schemas/ActivationRequest" }
+      }
+    */
+    try {
+      const {code} = req.body as {code: string};
+
+      const user = await UserModel.findOneAndUpdate(
+        {
+          activationCode: code,
+        },
+        {
+          isActive: true,
+        },
+        {
+          new: true,
+        }
+      );
+      res.status(200).json({
+        message: "User successfully activated",
+        data: user,
+      });
+
+    } catch (error) {
+      const err = error as unknown as Error;
+      res.status(400).json({
+        message: err.message,
+        data: null,
+      });
+    }
+  },
+  
   };
