# src/routes/api.ts
@@ -7,5 +7,6 @@ const router =  express.Router();
 router.post("/auth/register", authController.register);
 router.post("/auth/login", authController.login);
 router.get("/auth/me", authMiddleware, authController.me);
+router.post("/auth/activation", authController.activation);
 
 export default router;
